# CommonBash

./: .gitignore  INSTALL.sh  LICENSE  README.md  pyproject.toml
recipes/activenv/: activenv.sh
recipes/condanv/: condanv.sh
recipes/exal/: exal.sh
recipes/ezal/: ezal.sh
recipes/fancy-log/: fancy-log.sh
recipes/glog/: glog.sh
recipes/gstat/: gstat.sh
recipes/kync/: kync.sh
recipes/lsdid/: lsdid.sh
recipes/lsports/: lsports.sh
recipes/lsps/: lsps.sh
recipes/myip/: myip.sh
recipes/npc/: npc.sh
recipes/seek/: seek.sh
recipes/sizeof/: sizeof.sh
recipes/snvim/: snvim.sh
recipes/trash/: trash.sh
scripts/activenv/: INSTALL.sh  activenv.sh
scripts/fancy-log/: INSTALL.sh  fancy-log.sh
src/: common-bash
src/recipes/condanv/: condanv.sh
src/recipes/gstat/: gstat.sh
src/recipes/lsps/: lsps.sh
src/recipes/seek/: seek.sh
src/recipes/tradency/: tradency.sh
tests/: test_recipes.py
