[tool.poetry]
name = "commonbash"
version = "1.05"
description = "CommonBash: Recipes for a Better Workflow"
authors = ["tejaromalius <tayefi.ilia@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
flake8 = "^6.1.0"
shellcheck-py = "^0.9.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
